--- a/setup.cfg
+++ b/setup.cfg
@@ -12,4 +12,5 @@ python_requires = >=3.6.1
 
 [options.entry_points]
 console_scripts =
+    magento-phpcs = pre_commit_hooks.magento_phpcs:main
     magento-phpstan = pre_commit_hooks.magento_phpstan:main
