--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -1,3 +1,8 @@
+-   id: magento-phpcs
+    name: PHP Code Sniffer
+    description: PHP CodeSniffer is able to fix many errors and warnings automatically.
+    entry: magento-phpcs
+    language: python
 -   id: magento-phpstan
     name: PHPStan
     description: PHPStan is a static analysis system for PHP projects. It finds bugs in your codebase by inspecting the source files.
