--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -4,7 +4,7 @@
     entry: magento-phpcs
     language: python
 -   id: magento-phpstan
-    name: PHPStan
+    name: PHP Static Analysis Tool
     description: PHPStan is a static analysis system for PHP projects. It finds bugs in your codebase by inspecting the source files.
     entry: magento-phpstan
     language: python
