--- a/setup.cfg
+++ b/setup.cfg
@@ -5,6 +5,10 @@ description = Some magento hooks for pre-commit.
 long_description = file: README.md
 long_description_content_type = text/markdown
 url = https://github.com/eriocnemis/git.magento_pre_commit_hooks
+author = Eriocnemis Team
+author_email = dev.eriocnemis@gmail.com
+license = OSL-3.0
+license_file = LICENSE.md
 
 [options]
 packages = find:
