add webapi unit test

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,7 +4,7 @@ version = 1.0.1
 description = Some magento hooks for pre-commit.
 long_description = file: README.md
 long_description_content_type = text/markdown
-url = https://github.com/eriocnemis/git.magento_pre_commit_hooks
+url = https://github.com/eriocnemis/git.MagentoPreCommitHooks
 author = Eriocnemis Team
 author_email = dev.eriocnemis@gmail.com
 license = OSL-3.0
@@ -18,3 +18,5 @@ python_requires = >=3.6.1
 console_scripts =
     magento-phpcs = pre_commit_hooks.magento_phpcs:main
     magento-phpstan = pre_commit_hooks.magento_phpstan:main
+    magento-webapi-rest-phpunit = pre_commit_hooks.magento_webapi_phpunit:main
+    magento-webapi-soap-phpunit = pre_commit_hooks.magento_webapi_phpunit:main
