--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -9,3 +9,17 @@
     entry: magento-phpstan
     language: python
     types: [php]
+-   id: magento-webapi-rest-phpunit
+    name: REST API PHPUnit test
+    entry: magento_webapi_phpunit
+    language: python
+    pass_filenames: false
+    always_run: true
+    args: ["-c=dev/tests/api-functional/phpunit_rest.xml"]
+-   id: magento-webapi-soap-phpunit
+    name: SOAP API PHPUnit test
+    entry: magento_webapi_phpunit
+    language: python
+    pass_filenames: false
+    always_run: true
+    args: ["-c=dev/tests/api-functional/phpunit_soap.xml"]
