--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = pre_commit_hooks
-version = 1.0.1
+version = 1.0.3
 description = Some magento hooks for pre-commit.
 long_description = file: README.md
 long_description_content_type = text/markdown
@@ -18,5 +18,6 @@ python_requires = >=3.6.1
 console_scripts =
     magento-phpcs = pre_commit_hooks.magento_phpcs:main
     magento-phpstan = pre_commit_hooks.magento_phpstan:main
-    magento-webapi-rest-phpunit = pre_commit_hooks.magento_webapi_phpunit:main
-    magento-webapi-soap-phpunit = pre_commit_hooks.magento_webapi_phpunit:main
+    magento-phpunit = pre_commit_hooks.magento_phpunit:main
+    magento-webapi-rest-phpunit = pre_commit_hooks.magento_phpunit:main
+    magento-webapi-soap-phpunit = pre_commit_hooks.magento_phpunit:main
