--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = pre_commit_hooks
-version = 1.0.3
+version = 1.0.4
 description = Some magento hooks for pre-commit.
 long_description = file: README.md
 long_description_content_type = text/markdown
@@ -17,6 +17,7 @@ python_requires = >=3.6.1
 [options.entry_points]
 console_scripts =
     magento-phpcs = pre_commit_hooks.magento_phpcs:main
+    magento-phpmd = pre_commit_hooks.magento_phpmd:main
     magento-phpstan = pre_commit_hooks.magento_phpstan:main
     magento-phpunit = pre_commit_hooks.magento_phpunit:main
     magento-webapi-rest-phpunit = pre_commit_hooks.magento_phpunit:main
