--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = pre_commit_hooks
-version = 1.0.8
+version = 1.0.9
 description = Some magento hooks for pre-commit.
 long_description = file: README.md
 long_description_content_type = text/markdown
@@ -16,6 +16,7 @@ python_requires = >=3.6.1
 
 [options.entry_points]
 console_scripts =
+    magento-xml = pre_commit_hooks.magento_xml:main
     magento-phpcs = pre_commit_hooks.magento_phpcs:main
     magento-phpmd = pre_commit_hooks.magento_phpmd:main
     magento-phpcpd = pre_commit_hooks.magento_phpcpd:main
